--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -53,6 +53,13 @@ We can see that no line player did as much as 40 pushups, But approximately 25% 
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+favstats(pushups~position,data=mydata)
+```
+
+The first quartile of the skill players are bigger than the third quartile of the line players.  
+There are 8 line players and 22 skill players. 
+
 ## Inferential Results
 
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
