--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -64,6 +64,10 @@ There are 8 line players and 22 skill players.
 
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+t.test(pushups~position,data=mydata)
+```
+The probablility of getting this calculation is 0.000009421 in high school terms. We can say that the correct interpretation is that the skill players did more pushups than the line players. 
 
 # Discussion and Conclusion
 
